--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,11 @@
     "lucide-react": "^0.479.0",
     "next": "15.1.7",
     "react": "^19.0.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-use": "^17.6.0",
+    "react-use-window-size": "^1.0.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
