--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,17 +10,23 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@react-oauth/google": "^0.12.1",
     "@tabler/icons-react": "^3.31.0",
-    "axios": "^1.8.1",
+    "axios": "^1.8.4",
     "formik": "^2.4.6",
+    "framer-motion": "^12.6.5",
     "lucide-react": "^0.479.0",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
+    "react-speech-recognition": "^4.0.0",
+    "react-toastify": "^11.0.5",
     "react-use": "^17.6.0",
     "react-use-window-size": "^1.0.1",
+    "regenerator-runtime": "^0.14.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
